page templates finished

--- a/public/Html-templates/email/email1.html
+++ b/public/Html-templates/email/email1.html
@@ -5,30 +5,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Email Template</title>
     <style>
-      h1 {
-        font-size: 16px;
-      }
+h1 {
+  font-size: 16px;
+}
 
-      h3 {
-        font-size: 13px;
-        font-weight: 400;
-      }
+h3 {
+  font-size: 13px;
+  font-weight: 400;
+}
 
-      h4 {
-        color: #8f9293;
-        font-size: 11px;
-      }
+h4 {
+  color: #8f9293;
+  font-size: 11px;
+  margin-bottom: 8px;
+}
 
-      p {
-        max-width: 405px;
-        font-size: 15px;
-        line-height: 24px;
-      }
+p {
+  max-width: 405px;
+  font-size: 15px;
+  line-height: 24px;
+}
 
-      span {
-        color: #969899;
-        font-size: 13px;
-      }
+span {
+  color: #969899;
+  font-size: 13px;
+}
+
+ul, li, a {
+  text-decoration: none;
+  list-style: none;
+}
+
+button {
+  width: 184px;
+  height: 35px;
+  font-size: 15px;
+  color: #f16885;
+  border: 1px #f16885 solid;
+  background-color: transparent;
+  border-radius: 50px;
+
+}
+button > a {
+    color: #f16885;
+  }
 
       .left-layout,
       .right-layout {
